Multi-mount, storage settings UI, Kaniko build, session restore fixes
Storage:
- Add multi-mount support (additional PVCs per session)
- Add StorageSettingsPlugin (single-instance, dedicated UI)
- Add Current Status overview (storage volumes + active sessions)
- Change default storage type to nfs-k8s
- Show Pod names for In Use PVCs
- Label buttons: Remove PVC (NFS) / Delete PVC (Longhorn)

Session management:
- Add singleInstance() to ToolPlugin interface
- Add storage-type label to Pods for restore
- Restore storage type from Pod labels (fallback: PVC claim names)
- Re-create Service/HTTPRoute on controller restart (ensureService/ensureHTTPRoute)

Docker images:
- guacamole-desktop: add package-set-4 (Firefox, LibreOffice, GIMP, Inkscape)
- jupyter-lab: add package-sets 1,2,3 + R/Julia/Node/Java kernels
- Fix COPY heredoc for Kaniko compatibility (package-set-3-names.txt)

Build:
- Add kaniko-build.sh for K8s Job-based image builds
- Auto-create NFS PV/PVC for build context

UI:
- Reorder form fields (storage selection at bottom)
- Add MountSpec for extra mount configuration